--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -8,7 +8,7 @@
         <input type="text" class="form-control" placeholder="Username" name="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" required>
-<!--         <div class="checkbox">
+  <!--         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
@@ -38,7 +38,12 @@
 
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4">
-      <div class="g-signin2" data-onsuccess="onSignIn">
-        
+      <h2 class="form-signin-heading">Sign in with Google</h2>
+      <div>
+        <p> helloooooo </p>
+        <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       </div>
+
+    </div>
+  </div>
 </div> <!-- /container -->
