--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,3 +1,5 @@
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
 <div class="container">
 
   <div class="row">
@@ -38,12 +40,11 @@
 
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4">
-      <h2 class="form-signin-heading">Sign in with Google</h2>
+      <!-- <h2 class="form-signin-heading">Sign in with Google</h2> -->
       <div>
-        <p> helloooooo </p>
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       </div>
-
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </div>
   </div>
 </div> <!-- /container -->
