fix sizing for 'sign in with google' button

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -42,7 +42,7 @@
     <div class="col-lg-4 col-lg-offset-4">
       <!-- <h2 class="form-signin-heading">Sign in with Google</h2> -->
         <div>
-          <a href="auth/google_oauth2" class="sign_in"><img class="img-rounded" src="/assets/google.png"></a>
+          <a href="auth/google_oauth2" class="sign_in"><img class="img-rounded oauth-bttn-size" src="/assets/google.png"></a>
           <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
         </div>
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
