--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.sign_in {
-	width: 50px;
-	height: 50px;
-}
+oauth-bttn-size 
+	width: 100px
+	height: 50px
+
