--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,10 @@ body{
 
 .oauth-bttn-size {
   width: 220px;
-  height: 50px; 
+  height: 50px;
+  position: relative;
+  left: 18%;
+  top: 50px;
 }
 
 
