--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -3,50 +3,40 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
+    <div class="col-lg-4 col-lg-offset-8">
       <form class="form-signin" method="post" action="/index/login">
         <h2 class="form-signin-heading">Sign in</h2>
         <label for="inputEmail" class="sr-only">Username</label>
         <input type="text" class="form-control" placeholder="Username" name="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" required>
-  <!--         <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
- -->        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
+    <div class="col-lg-4 col-lg-offset-8">
       <form class="form-signin" method="post" action="/index/signup">
         <h2 class="form-signin-heading">Sign Up</h2>
         <label for="inputEmail" class="sr-only">Username</label>
         <input type="text" class="form-control" placeholder="Username" name="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" required>
-<!--         <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div> -->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       </form>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
-      <!-- <h2 class="form-signin-heading">Sign in with Google</h2> -->
-        <div>
-          <a href="auth/google_oauth2" class="sign_in"><img class="img-rounded oauth-bttn-size" src="/assets/google.png"></a>
-          <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-        </div>
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="col-lg-4 col-lg-offset-8">
+      <div>
+        <a href="auth/google_oauth2" class="sign_in"><img class="img-rounded oauth-bttn-size" src="/assets/google.png"></a>
+      </div>
     </div>
   </div>
-
+      <!-- <h2 class="form-signin-heading">Sign in with Google</h2>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <!-- </div> -->
+  <!-- </div> -->
 </div> <!-- /container -->
