write AJAX call to remove question from DOM when question DELETE route hit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>SurveyChimp - The Survey Monkey</title>
+  <title>SurveyChimp</title>
   <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => true %>
   <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -45,9 +45,9 @@
   </nav>
 
 <%= yield %>
-<div id="monkey-wrapper">
+<!-- <div id="monkey-wrapper">
   <div id="monkey"></div>
-</div>
+</div> -->
 
 </body>
 </html>
