fix problem with delete button not showing up

--- a/app/views/surveys/_question_partial.html.erb
+++ b/app/views/surveys/_question_partial.html.erb
@@ -3,5 +3,8 @@
 	<div class="question-wrapper">
 		<p class="question"><%=@last_question.text%></p>
 		<div class="space"></div>
+        <%= form_tag delete_question_path(@survey, @last_question), method:'DELETE', class: "delete-question-form", remote: true do %>
+          <%= submit_tag "Delete" %>
+        <% end %>
     </div>
 </div>
