--- a/app/views/surveys/edit_survey.html.erb
+++ b/app/views/surveys/edit_survey.html.erb
@@ -7,7 +7,7 @@
         <p class="question"><%=question.text%></p>
         <!-- <div class="space"></div> -->
         <%= form_tag delete_question_path(@survey, question), method:'DELETE', class: "delete-question-form", remote: true do %>
-          <%= submit_tag("add question", :class => "add_question") %>
+          <%= submit_tag("delete", :class => "add_question") %>
         <% end %>
       </div>
     </div>
