--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,12 +54,21 @@ body{
   right: 24px;
 }
 
+.google-sign-in {
+  border: 6px solid teal;
+}
+
+.sign-in {
+  position: relative;
+  left: 13%
+}
+
 .oauth-bttn-size {
   width: 220px;
   height: 50px;
   position: relative;
-  left: 18%;
-  top: 50px;
+  left: 0%;
+  top: 20px;
 }
 
 .add_question {
@@ -82,4 +91,36 @@ body{
   background: rgba(232,232,232,0.5);
 }
 
+.container {
+  border: 3px solid red;
+  position: relative;
+  top: 75px;
+}
 
+.row {
+  border: 2px solid white;
+  width: 500px;
+  position: relative;
+  left: 60%;
+}
+
+.col-lg-4 {
+  border: 2px solid orange;
+  width: 70%;
+  position: relative;
+  right: 10%;
+}
+
+.signin-text-container {
+  border: 5px solid teal;
+  width: 50%;
+  height: 100%;
+  float: top;
+  position: absolute;
+}
+
+.signin-text {
+  color: white;
+  text-align: center;
+  font-size: 40px;
+}
