--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,9 +1,14 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 <div class="container">
+  <div class="signin-text-container">
+    <p class="signin-text" id="sigin-text-1">
+    Create fully customized surveys and do other cool stuff like share surveys and more
+    </p>
+  </div>
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-8">
+    <div class="col-lg-4 col-lg-offset-3">
       <form class="form-signin" method="post" action="/index/login">
         <h2 class="form-signin-heading">Sign in</h2>
         <label for="inputEmail" class="sr-only">Username</label>
@@ -16,7 +21,7 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-8">
+    <div class="col-lg-4 col-lg-offset-3">
       <form class="form-signin" method="post" action="/index/signup">
         <h2 class="form-signin-heading">Sign Up</h2>
         <label for="inputEmail" class="sr-only">Username</label>
@@ -29,12 +34,13 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-8">
-      <div>
-        <a href="auth/google_oauth2" class="sign_in"><img class="img-rounded oauth-bttn-size" src="/assets/google.png"></a>
-      </div>
+    <div class="col-lg-4 col-lg-offset-3">
+      <a href="auth/google_oauth2" class="sign-in"><img class="img-rounded oauth-bttn-size" src="/assets/google.png"></a>
     </div>
   </div>
+
+
+
       <!-- <h2 class="form-signin-heading">Sign in with Google</h2>
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <!-- </div> -->
