--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -2,9 +2,18 @@
 
 <div class="container">
   <div class="signin-text-container">
+
     <p class="signin-text" id="sigin-text-1">
-    Create fully customized surveys and do other cool stuff like share surveys and more
+      Create fully customized surveys and do other cool stuff like share surveys and more
     </p>
+
+    <p class="signin-text" id="sigin-text-2">
+      derp derp derp derp derp derp derp derp derp derp derp derp derp derp derp derp
+    <p>
+
+    <p class="signin-text" id="sigin-text-3">
+      lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
+    <p>
   </div>
 
   <div class="row">
