create smooth cyclical text fade-in and fade-out on login page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,7 +72,6 @@ body{
 }
 
 .add_question {
-  border: 1px solid orange;
   position: absolute;
   right: 10%;
 }
@@ -82,7 +81,6 @@ body{
 }
 
 .question-wrapper {
-  border: 1px solid green;
   width: 100%;
 }
 
@@ -92,47 +90,41 @@ body{
 }
 
 .container {
-  border: 3px solid red;
   position: relative;
   top: 75px;
 }
 
 .row {
-  border: 2px solid white;
   width: 500px;
   position: relative;
   left: 60%;
 }
 
 .col-lg-4 {
-  border: 2px solid orange;
   width: 70%;
   position: relative;
   right: 10%;
 }
 
 .signin-text-container {
-  border: 5px solid teal;
   width: 50%;
   height: 100%;
   float: top;
   position: absolute;
 }
 
-.signin-text {
-  border: 1px solid yellow;
-  position: relative;
+.signin-text-container p {
+  position: absolute;
   top: 30%;
   color: white;
   text-align: center;
   font-size: 40px;
+  display: none;
 }
 
-#sigin-text-2 {
-  position: absolute;
+.signin-text-container p:first-child {
+  display: block;
 }
 
-#sigin-text-3 {
-  position: absolute;
-}
+
 
