change login page text to something meaningful and do general cleanup

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -5,15 +5,15 @@
   <div class="signin-text-container">
 
     <p id="signin-text-1">
-      Create fully customized surveys and do other cool stuff like share surveys and more
+      Create beautiful, fully customizable surveys and share them
     </p>
 
     <p id="signin-text-2">
-      derp derp derp derp derp derp derp derp derp derp derp derp derp derp derp derp
+      Get real-time insights and statistical analyses on user response data
     <p>
 
     <p id="signin-text-3">
-      lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
+      Visualize your response data in real-time with clean dashboards complete with graphs and charts for every metric
     <p>
   </div>
 
