--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -11,10 +11,11 @@
 			<!-- <hr> -->
 		</div>
 		<p id="survey-visibility">make it public:</p>
-		<!-- <div class="survey-ispublic-form"> -->
-			<%= check_box_tag(:is_public) %>
-		<!-- </div> -->
-		<%= submit_tag("Create Survey") %>
+		<%= check_box_tag(:is_public) %>
+		<%= submit_tag "create", id: "create_survey_btn" %>
+		
+		<p id="survey-url">url:</p>
+
 	</div>
 </div>
 
