--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,3 +220,14 @@ body{
   left: 400px;
   top: 319px;
 }
+
+.edit_survey_partial {
+  border: 3px solid yellow;
+  position: relative;
+  left: 10%;
+  top: 50px;
+  width: 80%;
+  height: 80%;
+  background-color: rgba(240, 240, 240, 0.5);
+  border-radius: 25px;
+}
