style add question page

--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -19,6 +19,6 @@
     	<input type="hidden" name="_method" value="PUT" >
     	<input type="hidden" name="id" value=<%=@survey.id%>>
     	<input type="text" name="text" placeholder="Question">
-    	<input type="submit" value="Add Question" >
+    	<input id="add-question-btn" type="submit" value="Add Question" >
     </form>
 </div>
