--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,10 @@ body{
   margin: auto;
 }
 
+.panel panel-default {
+  border: 5px solid orange;
+}
+
 .btn.btn-default{
   float: right;
 }
@@ -76,8 +80,15 @@ body{
   right: 10%;
 }
 
+#add_question {
+  border: 4px solid green;
+  position: relative;
+  left: 3%;
+  width: 93%;
+}
+
 .question {
-  width: 95%;
+  width: 98%;
 }
 
 .question-wrapper {
@@ -85,7 +96,11 @@ body{
 }
 
 .question-container {
+  border: 5px solid red;
+  position: relative;
   width: 90%;
+  left: 5%;
+  padding-bottom: 25px;
   background: rgba(232,232,232,0.5);
 }
 
@@ -132,12 +147,12 @@ body{
   top: 50px;
   width: 80%;
   height: 80%;
+  border: 3px solid white;
   background-color: rgba(240, 240, 240, 0.5);
   border-radius: 25px;
 }
 
 .survey-title-form-container {
-  border: 3px solid white;
   border-radius: 25px;
   height: 500px;
 }
@@ -222,12 +237,35 @@ body{
 }
 
 .edit_survey_partial {
-  border: 3px solid yellow;
-  position: relative;
-  left: 10%;
-  top: 50px;
-  width: 80%;
+  position: absolute;
+  left: 7%;
+  top: 13%;
+  width: 86%;
   height: 80%;
+  border: 3px solid white;
   background-color: rgba(240, 240, 240, 0.5);
   border-radius: 25px;
+}
+
+.edit_survey_partial h3 {
+  position: relative;
+  left: 2%;
+  width: 96%;
+  height: 50px;
+  font-family: 'Exo', sans-serif;
+  font-size: 25px;
+  color: rgb(92, 107, 168);
+}
+
+#add-question-btn {
+  position: relative;
+  width: 110px;
+  height: 30px;
+  left: 100px;
+  float: bottom;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  color: rgb(92, 107, 168);
+  font-family: 'Exo', sans-serif;
+  font-size: 12px;
 }
