--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -2,13 +2,15 @@
 
 	<h3><%= @survey.title %></h3>
 
-	<div class="display-question-form-button">
-		<a href="#" class="btn btn-info btn-lg">new question</a>
-	</div>
+	<div class="add-question-prompt-container">
+		<div class="display-question-form-button">
+			<a href="#" id="show-question-form" class="btn btn-info btn-lg">new question</a>
+		</div>
 
-	<div class="add-question-prompt">
-		<p>Erright!</p>
-		<p>Let's start by adding your first question</p>
+		<div class="add-question-prompt">
+			<p>Erright!</p>
+			<p>Let's start by adding your first question</p>
+		</div>
 	</div>
 
 	<div class="question-container">
