import bootstrap forms gem and reconfigure sass sturtucre

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/*
+  *=require_self
+  *=require_tree .
+  *=require rails_bootstrap_forms
+*/
+
 .question-wrapper{
 display:table;
 }
