--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -4,7 +4,7 @@
 
 	<div class="add-question-prompt-container">
 		<div class="display-question-form-button">
-			<a href="#" id="show-question-form" class="btn btn-info btn-lg">new question</a>
+			<a href="/surveys/<%= @survey.id %>/edit" id="show-question-form" class="btn btn-info btn-lg">new question</a>
 		</div>
 
 		<div class="add-question-prompt">
@@ -12,13 +12,14 @@
 			<p>Let's start by adding your first question</p>
 		</div>
 
-		<div class="add-question-form"
+		<!-- Fix routing for "add question" button click -->
+		<div class="add-question-form">
 			<%= bootstrap_form_for(@survey) do |f| %>
       			<%= f.text_field :title %>
         		<%= f.text_area :description %>
     			<%= f.submit "submit" %>
       		<% end %>
-	</div>
+		</div>
 
 	<div class="question-container">
 		<% @survey.questions.each do |question| %>
