assign event listener to 'add question' button

--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -13,15 +13,15 @@
 		</div>
 
 		<!-- Fix routing for "add question" button click -->
-		<div class="add-question-form">
+<!-- 		<div class="add-question-form">
 			<%= bootstrap_form_for(@survey) do |f| %>
       			<%= f.text_field :title %>
         		<%= f.text_area :description %>
     			<%= f.submit "submit" %>
       		<% end %>
-		</div>
+		</div> -->
 
-	<div class="question-container">
+	<!-- <div class="question-container">
 		<% @survey.questions.each do |question| %>
 			<div class="panel panel-default">
 				<div class="question-wrapper">
@@ -32,6 +32,6 @@
 	      		</div>
 	    	</div>
     	<% end %>	
-    </div>
+    </div> -->
 
 </div>
