prevent default action and fade out div content

--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -21,17 +21,18 @@
       		<% end %>
 		</div> -->
 
-	<!-- <div class="question-container">
-		<% @survey.questions.each do |question| %>
-			<div class="panel panel-default">
-				<div class="question-wrapper">
-	        		<p class="question"><%=question.text%></p>
-	        		<%= form_tag delete_question_path(@survey, question), method:'DELETE', class: "delete-question-form", remote: true do %>
-	          			<%= submit_tag("delete", :class => "add_question") %>
-	        		<% end %>
-	      		</div>
-	    	</div>
-    	<% end %>	
-    </div> -->
+		<div class="question-container">
+			<% @survey.questions.each do |question| %>
+				<div class="panel panel-default">
+					<div class="question-wrapper">
+		        		<p class="question"><%=question.text%></p>
+		        		<%= form_tag delete_question_path(@survey, question), method:'DELETE', class: "delete-question-form", remote: true do %>
+		          			<%= submit_tag("delete", :class => "add_question") %>
+		        		<% end %>
+		      		</div>
+		    	</div>
+	    	<% end %>	
+	    </div>
+	</div>
 
 </div>
