--- a/app/views/questions/_new_question_partial.html.erb
+++ b/app/views/questions/_new_question_partial.html.erb
@@ -1,7 +1,7 @@
 <div class="new-question-form"> 
-	<form id="add_question" action="/questions/<%= @survey.id %>" method="POST">
+	<form id="add_question" action="surveys/<%= @current_survey.id %>/questions" method="POST">
 		<input type="hidden" name="_method" value="PUT" >
-    	<input type="hidden" name="id" value=<%=@survey.id%>>
+    	<input type="hidden" name="id" value=<%=@current_survey.id%>>
     	<input type="text" name="text" placeholder="Question">
     	<input id="add-question-btn" type="submit" value="Add Question" >
     </form>
