--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -2,39 +2,20 @@
 
 	<h3><%= @survey.title %></h3>
 
+	<div class='content'>
+
+	</div>
+
 	<div class="add-question-prompt-container">
 		<div class="display-question-form-button">
-			<a href="/surveys/<%= @survey.id %>/edit" id="show-question-form" class="btn btn-info btn-lg">new question</a>
+			<a data-remote:"true" href="/surveys/<%= @survey.id %>/questions/new" id="show-question-form" class="btn btn-info btn-lg">new question</a>	
 		</div>
 
 		<div class="add-question-prompt">
 			<p>Erright!</p>
 			<p>Let's start by adding your first question</p>
 		</div>
-
-		<!-- Fix routing for "add question" button click -->
-<!--  		<div class="add-question-form">
-			<%= bootstrap_form_for(@survey) do |f| %>
-      			<%= f.text_field :title %>
-        		<%= f.text_area :description %>
-    			<%= f.submit "submit" %>
-      		<% end %>
-		</div> -->
-		
 	</div>
-
-		<!-- <div class="question-container">
-			<% @survey.questions.each do |question| %>
-				<div class="panel panel-default">
-					<div class="question-wrapper">
-		        		<p class="question"><%=question.text%></p>
-		        		<%= form_tag delete_question_path(@survey, question), method:'DELETE', class: "delete-question-form", remote: true do %>
-		          			<%= submit_tag("delete", :class => "add_question") %>
-		        		<% end %>
-		      		</div>
-		    	</div>
-	    	<% end %>	
-	    </div>
-	</div> -->
-
 </div>
+
+
