--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,7 +87,6 @@ body{
 }
 
 #add_question {
-  border: 4px solid green;
   position: relative;
   left: 3%;
   width: 93%;
@@ -259,6 +258,12 @@ body{
   font-family: 'Exo', sans-serif;
   font-size: 25px;
   color: rgb(92, 107, 168);
+}
+
+#new-question-text-box {
+  border: 3px solid white;
+  width: 500px;
+  background-color: rgba(224, 224, 224, 0.5) 
 }
 
 #add-question-btn {
