create db field for explanation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -260,10 +260,10 @@ body{
   color: rgb(92, 107, 168);
 }
 
-#new-question-text-box {
+.new-question-text-box {
   border: 3px solid white;
   width: 500px;
-  background-color: rgba(224, 224, 224, 0.5) 
+  background-color: rgba(240, 240, 240, 0.5) 
 }
 
 #add-question-btn {
