--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -244,7 +244,7 @@ body{
   left: 7%;
   top: 100px;
   width: 86%;
-  height: 80%;
+  height: 560px;
   border: 3px solid white;
   background-color: rgba(240, 240, 240, 0.5);
   border-radius: 25px;
@@ -281,7 +281,10 @@ body{
 
 .add-question-prompt-container {
   border: 3px solid red;
-  height: 80%;
+  height: 85%;
+  width: 100%;
+  position: absolute;
+  top: 65px;
 }
 
 .display-question-form-button {
@@ -312,4 +315,9 @@ body{
 
 .add-question-prompt p:nth-child(2) {
   text-align: center;
+}
+
+.content {
+  border: 2px solid yellow;
+  height: 300px;
 }
