--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -295,6 +295,14 @@ body{
   top: 175px;
 }
 
+.new-question-form {
+  border: 2px solid purple;
+  position: absolute;
+  top: 85px;
+  left: 5%;
+  width: 90%;
+}
+
 .add-question-prompt {
   border: 3px solid yellow;
   width: 500px;
@@ -319,5 +327,9 @@ body{
 
 .content {
   border: 2px solid yellow;
-  height: 300px;
+  height: 80%;
+}
+
+.question-text {
+  border: 2px solid pink;
 }
