--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 */
 
 .question-wrapper{
-display:table;
+  display:table;
 }
 
 .question{
@@ -270,8 +270,7 @@ body{
   position: relative;
   width: 110px;
   height: 30px;
-  left: 100px;
-  float: bottom;
+  left: 18%;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.5);
   color: rgb(92, 107, 168);
@@ -330,6 +329,14 @@ body{
   height: 80%;
 }
 
-.question-text {
+.question-div {
   border: 2px solid pink;
+  height: 40px;
+}
+
+.question-text {
+  border: 1px dashed orange;
+  position: relative;
+  left: 30px;
+  width: 50%;
 }
