--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -332,11 +332,20 @@ body{
 .question-div {
   border: 2px solid pink;
   height: 40px;
+  width: 100%;
 }
 
 .question-text {
   border: 1px dashed orange;
+  display: inline-block;
   position: relative;
-  left: 30px;
+  margin-left: 30px;
   width: 50%;
+}
+
+.set-resp-type-btn {
+  border: 2px solid green;
+  display: inline-block;
+  margin-left: 50px;
+  margin-bottom: 2px;
 }
