--- a/app/views/questions/_question_partial.html.erb
+++ b/app/views/questions/_question_partial.html.erb
@@ -1,3 +1,4 @@
 <div class="question-div">
 	<h4 class="question-text"><%= @new_question.text %></h4>
+	<button type="button" class="btn btn-info btn-sm set-resp-type-btn">Response Type</button>
 </div>
