fix spacing problem between added questions

--- a/app/views/questions/_question_partial.html.erb
+++ b/app/views/questions/_question_partial.html.erb
@@ -1,4 +1,4 @@
 <div class="question-div">
-	<h4 class="question-text"><%= @new_question.text %></h4>
-	<button type="button" class="btn btn-info btn-sm set-resp-type-btn">Response Type</button>
+	<p class="question-text"><%= @new_question.text %></p>
+	<button type="button" class="btn btn-primary set-resp-type-btn">Response Type</button>
 </div>
