--- a/app/views/questions/_question_partial.html.erb
+++ b/app/views/questions/_question_partial.html.erb
@@ -1,9 +1,9 @@
 <div class="question-div">
 	<p class="question-text"><%= @new_question.text %></p>
-	<button type="button" class="btn btn-primary set-resp-type-btn">Response Type</button>
+	<button type="button" class="btn btn-primary set-resp-type-btn">response</button>
 
-	<div class="dropdown">
-    	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">required
+	<div class="required-dropdown">
+    	<button class="btn btn-primary dropdown-toggle required-dropdown-toggle" type="button" data-toggle="dropdown">required
     	<span class="caret"></span></button>
     	<ul class="dropdown-menu">
       		<li><a href="#">yes</a></li>
