--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
     </div><!-- /.container-fluid -->
   </nav>
 
+  <div class="modal" style="display:none;">
+  </div>
+
 <%= yield %>
 <!-- <div id="monkey-wrapper">
   <div id="monkey"></div>
