create and style  window to set response type

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -1,1 +1,29 @@
-<p> TEST </p>
+<div id="dialog-form" title="Create new user">
+  <p class="validateTips">All form fields are required.</p>
+
+  	<div class="resp-type-container">
+
+  		<div class="resp-type-selector">
+  			<form>
+			    <fieldset>
+				    <div class="radio">
+				    	<label><input type="radio" name="textinput">text input</label>
+					</div>
+
+					<div class="radio">
+					  <label><input type="radio" name="multichoice">multiple choice</label>
+					</div>
+
+					<div class="radio">
+					  <label><input type="radio" name="checkboxes">checkboxes</label>
+					</div>
+			    </fieldset>
+		    </form>
+		</div>
+	</div>
+
+	<div class="resp-type-options">
+
+	</div>
+
+</div>
