--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -364,3 +364,28 @@ body{
   position: relative;
   float: right;
 }
+
+.modal {
+  border: 4px solid red;
+  background: rgba(0, 38, 77, 0.5);
+}
+
+.resp-type-container {
+  border: 2px solid white;
+  border-radius: 15px;
+  background: rgba(229, 242, 255, 0.5);
+  width: 70%;
+  height: 520px;
+  position: relative;
+  left: 15%;
+  top: 85px;
+}
+
+.resp-type-container form {
+  border: 2px dashed lime;
+  border-radius: 15px;
+  width: 20%;
+  position: relative;
+  left: 15px;
+  
+}
