style set resp type window

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -3,6 +3,8 @@
 
   	<div class="resp-type-container">
 
+  		<p>set the response type</p>
+
   		<div class="resp-type-selector">
   			<form>
 			    <fieldset>
