--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -373,7 +373,7 @@ body{
 .resp-type-container {
   border: 2px solid white;
   border-radius: 15px;
-  background: rgba(229, 242, 255, 0.5);
+  background: rgba(0, 38, 77, 0.8);
   width: 70%;
   height: 520px;
   position: relative;
@@ -381,11 +381,32 @@ body{
   top: 85px;
 }
 
+.resp-type-container p {
+  border: 2px dashed rgb(153, 102, 255);
+  border-radius: 5px;
+  font-family: 'Exo', sans-serif;
+  font-size: 20px;
+  color: white;
+  width: 30%;
+  position: relative;
+  left: 15px;
+  top: 30px;
+}
+
 .resp-type-container form {
   border: 2px dashed lime;
   border-radius: 15px;
-  width: 20%;
+  width: 30%;
   position: relative;
   left: 15px;
-  
+  top: 35px;
+}
+
+.resp-type-container label {
+  border: 1px dashed white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-family: 'Exo', sans-serif;
+  font-size: 16px;
+  color: white;
 }
