--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -3,7 +3,7 @@
 
   	<div class="resp-type-container">
 
-  		<p>set the response type</p>
+  		<p>set the response type:</p>
 
   		<div class="resp-type-selector">
   			<form>
@@ -22,10 +22,12 @@
 			    </fieldset>
 		    </form>
 		</div>
+
+		<div class="resp-type-options">
+
+		</div>
+		
 	</div>
 
-	<div class="resp-type-options">
-
-	</div>
 
 </div>
