fix radio button problem

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -9,15 +9,15 @@
   			<form>
 			    <fieldset>
 				    <div class="radio">
-				    	<label><input type="radio" name="textinput">text input</label>
+				    	<label><input type="radio" name="optradio">text input</label>
 					</div>
 
 					<div class="radio">
-					  <label><input type="radio" name="multichoice">multiple choice</label>
+					  <label><input type="radio" name="optradio">multiple choice</label>
 					</div>
 
 					<div class="radio">
-					  <label><input type="radio" name="checkboxes">checkboxes</label>
+					  <label><input type="radio" name="optradio">checkboxes</label>
 					</div>
 			    </fieldset>
 		    </form>
@@ -26,7 +26,7 @@
 		<div class="resp-type-options">
 
 		</div>
-		
+
 	</div>
 
 
