bind event listener to radio buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -411,10 +411,10 @@ body{
   color: white;
 }
 
-.resp-type-options {
+.resp-options {
   border: 2px dashed rgb(153, 0, 153);
   border-radius: 10px;
-  width: 50%;
+  width: 60%;
   height: 90%;
   position: relative;
   top: -180px;
