--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -1,5 +1,4 @@
 <div id="dialog-form" title="Create new user">
-  <p class="validateTips">All form fields are required.</p>
 
   	<div class="resp-type-container">
 
@@ -9,25 +8,22 @@
   			<form>
 			    <fieldset>
 				    <div class="radio">
-				    	<label><input type="radio" name="optradio">text input</label>
+				    	<label><input type="radio" name="optradio" id="r1">text input</label>
 					</div>
 
 					<div class="radio">
-					  <label><input type="radio" name="optradio">multiple choice</label>
+					  <label><input type="radio" name="optradio" id="r2">multiple choice</label>
 					</div>
 
 					<div class="radio">
-					  <label><input type="radio" name="optradio">checkboxes</label>
+					  <label><input type="radio" name="optradio" id="r3">checkboxes</label>
 					</div>
 			    </fieldset>
 		    </form>
 		</div>
 
-		<div class="resp-type-options">
+		<div class="resp-options">
 
 		</div>
-
 	</div>
-
-
 </div>
