--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -20,15 +20,15 @@
 		</div>
 
 		<div class="resp-options">
-			<div class="optradio-r1" hidden>
+			<div class="optradio-form" id="optradio-r1" hidden>
 				<p>some form for text input</p>
 			</div>
 
-			<div class="optradio-r2" hidden>
+			<div class="optradio-form" id="optradio-r2" hidden>
 				<p>some form for multiple choice</p> 
 			</div>
 
-			<div class="optradio-r3" hidden>
+			<div class="optradio-form" id="optradio-r3" hidden>
 				<p>some form for checkboxes</p>
 			</div>
 
