--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -421,3 +421,17 @@ body{
   float: right;
   margin-right: 25px;
 }
+
+.optradio-form {
+  border: 2px dashed white;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+
+.optradio-form p {
+  border: 2px solid orange;
+  position: relative;
+  top: 0px;
+}
+
