--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -382,7 +382,6 @@ body{
 }
 
 .resp-type-container p {
-  border: 2px dashed rgb(153, 102, 255);
   border-radius: 5px;
   font-family: 'Exo', sans-serif;
   font-size: 20px;
@@ -393,8 +392,7 @@ body{
   top: 100px;
 }
 
-.resp-type-container form {
-  border: 2px dashed lime;
+.resp-type-selector form {
   border-radius: 15px;
   width: 30%;
   position: relative;
@@ -403,7 +401,6 @@ body{
 }
 
 .resp-type-container label {
-  border: 1px dashed white;
   padding-top: 10px;
   padding-bottom: 10px;
   font-family: 'Exo', sans-serif;
