--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -29,7 +29,7 @@
 				<p align="right">multiple choice</p> 
 				<button class="btn btn-primary" id="mc-add-choice" type="button">add</button>
 				<form id="mult-choice-possibilities" action="/surveys/<%= @current_question.survey_id %>/questions/<%= @current_question.id %>" method="POST"> 
-					<table class="answer-choice-tbl">
+					<table class="answer-choice-tbl" id="actbl1">
 						<tr>
 							<td class="numerator" id="l1">a</td>
 							<td><input class="answer-choice" type="text" name="text" placeholder="write an answer choice"></td>
@@ -47,7 +47,7 @@
 				<p align="right">multiple answers</p>
 				<button class="btn btn-primary" id="ma-add-choice" type="button">add</button>
 				<form id="mult-answer-possibilities" action="/surveys/<%= @current_question.survey_id %>/questions/<%= @current_question.id %>" method="POST"> 
-					<table class="answer-choice-tbl">
+					<table class="answer-choice-tbl" id="actbl2">
 						<tr>
 							<td class="numerator" id="n1">a</td>
 							<td><input class="answer-choice" type="text" name="text" placeholder="write an answer choice"></td>
