write code to auto-letter each answer choice

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -40,7 +40,7 @@
 						</tr>
 					</table>
 				</form>
-				<input class="submit-answer-choices" type="submit" value="save">
+				<input class="btn btn-primary submit-answer-choices" type="submit" value="save">
 			</div>
 
 			<div class="optradio-form" id="optradio-r3" hidden>
